# RAD-TEAM

./: .gitignore  DEVELOPMENT.md  FUTURE_WORK.md  Makefile  README.md  RELEASES  build_docs.sh  config.json  env.yml  environment.yml  model.pt  pyproject.toml  pytest.ini  ray_cluster_config.yaml  ray_cluster_config.yml  ray_cluster_config_template.yaml  runtests  setup.py  start_cluster.sh  stop_cluster.sh  thesis_environment.yml
.github/workflows/: ci.yml
algos/RADA2C/: README.md  evaluate.py  ppo.py
algos/RADA2C/rl_tools/: mpi_pytorch.py
algos/RADTEAM/: RADTEAM_core.py  README.py  evaluate.py  evaluate_bulk.py  main.py  ppo.py  ppo_tools.py
algos/RADTEAM/test_evironments/: test_env_obs1_low_1500x1500  test_env_obs2_low_1500x1500
algos/artifact_multiagent/: README.md  compare_results.py  environment.yml  evaluate.py  generate_test_envs.py  main.py  plot_results.py  ppo.py
algos/cnn_ppo/: core.py  ppo.py  ref.txt
algos/cnn_ppo/utilities/: logx.py  mpi_pytorch.py  run_utils.py  test_policy.py
algos/multi-agent/: CNN_PPO.py  train.py  vanilla_PPO.py
algos/multiagent/: CNN_PPO.py  compare_results.py  core.py  environment.yml  epoch_logger.py  evaluate.py  main.py  plot_results.py  ppo.py  ppo_remote.py  setup.py  train.py  train_remote.py  vanilla_PPO.py
algos/multiagent/NeuralNetworkCores/: RADA2C_core.py  RADTEAM_core.py  uniform_search.py
algos/multiagent/rl_tools/: mpi_pytorch.py
algos/original_goal/ppo/: core.py  ppo.py  ppo_tools.py
algos/ppo/: README.md  core.py  environment.yml  epoch_logger.py  main.py  ppo.py
algos/ppo/eval/: eval_core.py  test_env_gen.py  test_policy.py
algos/simple_ppo/: PPO.py  environment.yml  plot_graph.py  train.py
algos/test_cnn/: RADTEAM_core.py  core.py  ppo.py  train.py
algos/test_cnn/rl_tools/: logx.py  mpi_pytorch.py  plot.py  run_utils.py
algos/test_environment/: core.py  ppo.py
algos/test_environment/eval/: core.py  rl_plots.py  test_env_gen.py  test_policy.py  test_res.py
algos/test_environment/rl_tools/: mpi_pytorch.py
algos/test_ppo/: core.py  ppo.py  train.py
docs/: Makefile  api.rst  conf.py  development.rst  index.rst
docs/usage/: installation.rst
eval/: rl_plots.py
gym_rad_search/: setup.py
gym_rad_search/gym_rad_search/: __init__.py
gym_rad_search/gym_rad_search.egg-info/: requires.txt
gym_rad_search/gym_rad_search/envs/: __init__.py  marl_rad_search_env.py  rad_search_env.py
integration_tests/BROKEN_CNN_MARL/test1/: ppo.py
integration_tests/BROKEN_RADA2C_MARL/test1/: ppo_tools.py
integration_tests/CNN _MARL/test1/: evaluate.py  ppo.py
integration_tests/CNN _MARL/test2/: evaluate.py
src/: main.py
src/envs/: README.md  __init__.py  register_simplegrid.py  setup.py  simple_gridworld.py
src/math_utils/: estimator.py  normalize.py  standardize.py
src/neural_net_cores/: simple_mlp.py
src/utils/: normalize.py  standardize.py
tests/: main.py  test_envs.py  test_estimator.py  test_normalization.py  test_standardization.py  test_testing.py
unit_testing/: test.py  unit_cnn_ppo.py  unit_rad_ppo_agent.py  unit_rad_search_env.py
unit_tests/: __init__.py  test_PPO.py  test_RADTEAM_core.py  test_Train.py
utility/: evaluate_bulk.py  generate_test_envs.py  plot_results.py  plot_training.py
utility/test_evironments/: test_env_obs4_high_1500x1500  test_env_obs5_low_1500x1500
utility/test_evironments_1500/: test_env_obs0_none_1500x1500  test_env_obs1_none_1500x1500  test_env_obs4_low_1500x1500  test_env_obs4_none_1500x1500  test_env_obs5_high_1500x1500
utility/test_evironments_TEST4/: test_env_obs0_none_700x700
(+219 files in other folders)
