[project]
name = "RAD-TEAM"
version = "1.0.0"
description = "TBD"
readme = "README.md"

authors = [
  {name = "Ben Totten", email = "ttotten@pdx.edu"},
]
maintainers = [
  {name = "Ben Totten", email = "ttotten@pdx.edu"},
]

requires-python = ">= 3.10"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Researchers",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Code = "https://github.com/bentotten/RAD-TEAM"
Documentation = "https://github.com/bentotten/RAD-TEAM"

# Setup
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Pytest
[tool.coverage.run]
disable_warnings = ["couldnt-parse"]
branch = false
omit = [
    "setup.py",
    "__init__.py",
    "tests/*"
]

[tool.pytest.ini_options]
# Deterministic ordering for tests; useful for pytest-xdist.
env = [
	"PYTHONHASHSEED=0"
]
markers = [
    "happy: happy case tests",
    "expensive: marks tests as expensive (deselect with '-m \"not expensive\"')"
]

# Linting
[tool.ruff]
line-length = 127
# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.black]
line-length = 127

[tool.ruff.lint]
# TBD - Leaving commented out for now
# See https://beta.ruff.rs/docs/rules/
# select = ["E", "F", "B", "UP", "C90", "RUF"]
# ignore = ["B028", "RUF013"]

[tool.ruff.lint.per-file-ignores]
# TBD - Leaving commented out for now
# Default implementation in abstract methods
# "./src/main.py"= ["B027"]

# Type checking
[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
# Commenting out for now
# exclude = """(?x)(
#     tests/test_logger.py$
#     | tests/test_train_eval_mode.py$
#   )"""